# chimera-pool-core

./: .dockerignore  .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  BLOCKDAG_MIGRATION_AUDIT.md  CLAUDE.md  CODEBASE_AUDIT.md  COMPREHENSIVE_AUDIT_DEC26.md  Cargo.toml  DATABASE_FOUNDATION_COMPLETE.md  DEEP_DIVE_AUDIT.md  DEPLOYMENT.md  ELITE_AUDIT_REPORT.md  EXECUTIVE_SUMMARY.md  FINAL_INTEGRATION_TEST_SUMMARY.md  GLOBAL_RULES_AUDIT_REPORT.md  LICENSE  MIGRATION_TRACKING.md  MULTICOIN_IMPLEMENTATION_PLAN.md  Makefile  PRE_PUSH_CHECKLIST.md  PRODUCTION_READINESS_INVESTIGATION.md  README.dev.md  README.md  REVISED_IMPLEMENTATION_PLAN.md  SECURITY_AUDIT.md  SECURITY_REMEDIATION_ROADMAP.md  SPEC_DRIVEN_DEVELOPMENT_SUMMARY.md  TOOL_RESILIENCE_PLAN.md  UI_OVERHAUL_PLAN.md  WORLD_CLASS_DEPLOYMENT_ANALYSIS.md  coverage  coverage.out  coverage_binary  coverage_security  coverage_shares  db_coverage  debug-test3.tsx  go.mod  go.sum  (+13 more)
configs/: stratum.yaml
docs/: STRATUM_V2_HYBRID_IMPLEMENTATION.md  UI_AUDIT_FINDINGS.md  UI_REDESIGN_PLAN.md  USER_MINING_CONTROL_SYSTEM.md
e2e/: admin-features.spec.ts  admin-tabs.spec.ts  auth-flows.spec.ts  auth-security.spec.ts  chart-slot.spec.ts  charts.spec.ts  (+11 more)
src/algorithm-engine/: ALGORITHM_HOT_SWAP_COMPLETE.md  BLAKE2S_IMPLEMENTATION.md  Cargo.toml
src/algorithm-engine/benches/: algorithm_benchmarks.rs
src/algorithm-engine/examples/: hot_swap_demo.rs
src/algorithm-engine/src/: algorithms.rs  hot_swap.rs  lib.rs
src/algorithm-engine/tests/: blake2s_test_vectors.rs  hot_swap_e2e.rs  integration_tests.rs  mining_load_integration.rs
(+644 files in other folders)
